# xeus-morpho

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  REQUIRES.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  install_manifest.txt  xeus-morphoConfig.cmake.in
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/xeus-morpho/: xeus_morpho_config.hpp  xinterpreter.hpp
notebooks/: xeus-morpho.ipynb
share/jupyter/kernels/xmorpho/: kernel.json  kernel.json.in
src/: main.cpp  xcomplete.cpp  xinterpreter.cpp
test/: test_xmorpho_kernel.py
